--- a/sip_pdb/templates/login/layout.jinja
+++ b/sip_pdb/templates/login/layout.jinja
@@ -70,7 +70,7 @@
           <a class="nav-link" href="{{ url_for('auth.lihat')}}">Lihat</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Petunjuk</a>
+          <a class="nav-link" href="https://www.smkitihsanulfikri.sch.id/info-ppdb-2526/">Petunjuk</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="{{ url_for('auth.login_admin') }}">Admin</a>
