--- a/sip_pdb/templates/registrant/layout.jinja
+++ b/sip_pdb/templates/registrant/layout.jinja
@@ -69,7 +69,7 @@
                   <li><a class="dropdown-item"
                     hx-boost="true" hx-target="#hx_content" hx-swap="innerHTML"
                     href="{{ url_for('registrant.ganti_password') }}">Ganti Password</a></li>
-                  <li><a class="dropdown-item" href="{{ url_for('auth.logout') }}">Sign out</a></li>
+                  <li><a class="dropdown-item" hx-boost="false" href="{{ url_for('auth.logout') }}">Sign out</a></li>
                 </ul>
               </div>
         </div>
