--- a/sip_pdb/templates/registrant/beranda.jinja
+++ b/sip_pdb/templates/registrant/beranda.jinja
@@ -93,8 +93,8 @@
     <hr />
     <p>
         Setelah transfer selesai, upload hasil scan / foto kuitansi pembayaran untuk diverifikasi
-        oleh panitia pada tombol dibawah ini serta lakukan konfirmasi pembayaran ke ustd. 
-        Yusuf (0856 4108 3527) atau ke ustd. Mahfud (0822 2093 0193).
+        oleh panitia pada tombol dibawah ini serta lakukan konfirmasi pembayaran ke 
+        ustd. Yusuf (0856 4108 3527 ).
     </p>
     <div class="row">
     <div class="col">
