edit tanggal di beranda, bismillah

--- a/sip_pdb/templates/registrant/beranda.jinja
+++ b/sip_pdb/templates/registrant/beranda.jinja
@@ -73,7 +73,7 @@
     <h1>Selamat, anda telah menyelesaikan pendaftaran!</h1>
     <p>
         Terimakasih telah mendaftar di SMKIT Ihsanul Fikri.<br/>
-        Tes PPDB akan dilaksanakan pada tanggal 11 Februari 2024<br/>
+        Tes PPDB akan dilaksanakan pada tanggal 1 Desember 2024<br/>
         Silahkan Unduh dan cetak formulir, kartu pendaftaran dan surat pernyataan.
     </p>        
     <a class="btn btn-primary" hx-boost="false" target="_blank" href="{{url_for('registrant.download_kartu_pendaftaran')}}">
