--- a/sip_pdb/templates/admin/lihat_profil.jinja
+++ b/sip_pdb/templates/admin/lihat_profil.jinja
@@ -75,6 +75,32 @@
     <div class="col">
         <div class="card">
         <div class="card-header">
+            Aksi Admin
+        </div>
+        <div class="card-body">
+            <a class="btn btn-warning" hx-boost="false" 
+            href="{{url_for('admin.revert_finalization', username=rg.username)}}">Undo Finaliasi</a>
+            &nbsp;
+            <a class="btn btn-secondary" hx-boost="false"  href="{{url_for('admin.log_as_registrant', user_id=rg.id)}}">
+            Masuk Sebagai Pendaftar</a>
+            &nbsp;
+            <a class="btn btn-danger" hx-boost="false" 
+            href="#">Reset Password</a>
+        </div>
+        </div>
+    </div>
+</div>
+
+<div class="row">
+<div class="col">
+&nbsp;
+</div>
+</div>
+
+<div class="row">
+    <div class="col">
+        <div class="card">
+        <div class="card-header">
             Kelengkapan Data
         </div>
         <div class="card-body">
