tambah reset password

--- a/sip_pdb/templates/admin/lihat_pendaftar.jinja
+++ b/sip_pdb/templates/admin/lihat_pendaftar.jinja
@@ -41,7 +41,7 @@
 </table>
 </div>
 </div>
-<div class="modal fade" id="confirm_delete" tabindex="-1" aria-hidden="true">
+<div class="modal modal-warning fade" id="confirm_delete" tabindex="-1" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
