--- a/sip_pdb/templates/admin/lihat_pendaftar.jinja
+++ b/sip_pdb/templates/admin/lihat_pendaftar.jinja
@@ -24,8 +24,8 @@
 <table id="tabel_utama" class="table table-striped table-sm" style="width:100%">
     <thead>
         <tr>
-            <th>ID</th>
-            <th>No. Pendaftaran</th>
+            <th>Reg. ID</th>
+            <th>Username</th>
             <th>Nama</th>
             <th>Sekolah Asal</th>
             <th>Jalur Seleksi</th>
