--- a/sip_pdb/templates/admin/lihat_pendaftar.jinja
+++ b/sip_pdb/templates/admin/lihat_pendaftar.jinja
@@ -24,6 +24,7 @@
 <table id="tabel_utama" class="table table-striped table-sm" style="width:100%">
     <thead>
         <tr>
+            <th>No.</th>
             <th>Reg. ID</th>
             <th>Username</th>
             <th>Nama</th>
@@ -68,7 +69,10 @@ $( document ).ready(function() {
         ajax: "{{url_for('admin.data_pendaftar')}}",
         pageLength: 25,
         scrollX: true,
-        scrollY: 400
+        scrollY: 400,
+        order: [
+          [0, 'desc']
+        ]
     });
 });
 var del_modal = (reg_id) => {
