--- a/sip_pdb/templates/admin/beranda.jinja
+++ b/sip_pdb/templates/admin/beranda.jinja
@@ -33,6 +33,7 @@
             <th>Nama</th>
             <th>Asal Sekolah</th>
             <th>Kontak</th>
+            <th>Aksi</th>
         </tr>
         </thead>
         <tbody></tbody>
@@ -67,6 +68,7 @@
             <th>Data Ayah</th>
             <th>Data Ibu</th>
             <th>Finalisasi</th>
+            <th>Aksi</th>
         </tr>
         </thead>
         <tbody></tbody>
